// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IntentsFeedback /> Multiple initial intents Segment tracking should send event on curation 1`] = `
Array [
  Array [
    "intent-feedback-user-submission",
    Object {
      "account_domain": "acme",
      "message_id": 1,
      "next_state": Array [
        "foo/intent",
        "bar/intent",
        "baz/intent",
      ],
      "previous_state": Array [
        "foo/intent",
        "bar/intent",
        "baz/intent",
      ],
      "sub_events": Array [
        Object {
          "event_type": "remove-intent",
          "intent": "foo/intent",
        },
      ],
      "ticket_id": undefined,
      "user_id": 2,
    },
  ],
]
`;

exports[`<IntentsFeedback /> Multiple initial intents Segment tracking should send event on menu toggle 1`] = `
Array [
  Array [
    "intent-feedback-dropdown-open",
    Object {
      "account_domain": "acme",
      "message_id": 1,
      "ticket_id": undefined,
      "user_id": 2,
    },
  ],
]
`;

exports[`<IntentsFeedback /> Single initial intent should add an intent on click add 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="toggleMenu btn btn-secondary"
        type="button"
      >
        <span
          class="mr-1 menuLabel"
        >
          2 intents detected
        </span>
        <span
          class="caret material-icons"
        >
          arrow_drop_down
        </span>
      </button>
      <div
        aria-hidden="true"
        class="menuWrapper dropdown-menu dropdown-menu-right"
        role="menu"
        tabindex="-1"
      >
        <div
          class="menu"
        >
          <div
            id="intent-tooltip-1"
          />
          <div
            class="header"
          >
            Message intents
            <i
              class="material-icons ml-2 info"
              id="intent-info-1"
            >
              info_outline
            </i>
          </div>
          <div
            class="options"
          >
            <h6
              class="subheader dropdown-header"
              tabindex="-1"
            >
              2 intents detected
            </h6>
            <div
              class="dropdownItemWrapper"
            >
              <div
                class="dropdownItemLabel"
              >
                <span
                  class="action"
                >
                  <span
                    class="dropdownButton"
                  >
                    <i
                      class="reject icon material-icons"
                    >
                      close
                    </i>
                  </span>
                </span>
                <span
                  class="label"
                >
                  Bar/intent
                </span>
              </div>
              <div
                class="description"
                title="bar intent description"
              >
                bar intent description
              </div>
            </div>
            <div
              class="dropdownItemWrapper"
            >
              <div
                class="dropdownItemLabel"
              >
                <span
                  class="action"
                >
                  <span
                    class="dropdownButton"
                  >
                    <i
                      class="reject icon material-icons"
                    >
                      close
                    </i>
                  </span>
                </span>
                <span
                  class="label"
                >
                  Foo/intent
                </span>
              </div>
              <div
                class="description"
                title="foo intent description"
              >
                foo intent description
              </div>
            </div>
            <div
              class="dropdown-divider"
              tabindex="-1"
            />
            <h6
              class="subheader dropdown-header"
              tabindex="-1"
            >
              Other intents
            </h6>
            <div
              class="dropdownItemWrapper hoverable"
            >
              <div
                class="dropdownItemLabel"
              >
                <span
                  class="action"
                >
                  <span
                    class="dropdownButton"
                    id="add-baz-intent-1"
                  >
                    <i
                      class="icon material-icons"
                    >
                      add
                    </i>
                  </span>
                </span>
                <span
                  class="label"
                >
                  Baz/intent
                </span>
              </div>
              <div
                class="description"
                title="baz intent description"
              >
                baz intent description
              </div>
            </div>
            <div
              class="dropdownItemWrapper hoverable"
            >
              <div
                class="dropdownItemLabel"
              >
                <span
                  class="action"
                >
                  <span
                    class="dropdownButton"
                    id="add-other-intent-1"
                  >
                    <i
                      class="icon material-icons"
                    >
                      add
                    </i>
                  </span>
                </span>
                <span
                  class="label"
                >
                  Other/intent
                </span>
              </div>
              <div
                class="description"
                title="other intent description"
              >
                other intent description
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<IntentsFeedback /> Single initial intent should remove an intent on click remove 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="toggleMenu btn btn-secondary"
        type="button"
      >
        <span
          class="mr-1 menuLabel"
        >
          No intents detected
        </span>
        <span
          class="caret material-icons"
        >
          arrow_drop_down
        </span>
      </button>
      <div
        aria-hidden="true"
        class="menuWrapper dropdown-menu dropdown-menu-right"
        role="menu"
        tabindex="-1"
      >
        <div
          class="menu"
        >
          <div
            id="intent-tooltip-1"
          />
          <div
            class="header"
          >
            Message intents
            <i
              class="material-icons ml-2 info"
              id="intent-info-1"
            >
              info_outline
            </i>
          </div>
          <div
            class="options"
          >
            <h6
              class="subheader dropdown-header"
              tabindex="-1"
            >
              No intents detected
            </h6>
            <div
              class="dropdown-divider"
              tabindex="-1"
            />
            <h6
              class="subheader dropdown-header"
              tabindex="-1"
            >
              Other intents
            </h6>
            <div
              class="dropdownItemWrapper hoverable"
            >
              <div
                class="dropdownItemLabel"
              >
                <span
                  class="action"
                >
                  <span
                    class="dropdownButton"
                    id="add-foo-intent-1"
                  >
                    <i
                      class="icon material-icons"
                    >
                      add
                    </i>
                  </span>
                </span>
                <span
                  class="label"
                >
                  Foo/intent
                </span>
              </div>
              <div
                class="description"
                title="foo intent description"
              >
                foo intent description
              </div>
            </div>
            <div
              class="dropdownItemWrapper hoverable"
            >
              <div
                class="dropdownItemLabel"
              >
                <span
                  class="action"
                >
                  <span
                    class="dropdownButton"
                    id="add-bar-intent-1"
                  >
                    <i
                      class="icon material-icons"
                    >
                      add
                    </i>
                  </span>
                </span>
                <span
                  class="label"
                >
                  Bar/intent
                </span>
              </div>
              <div
                class="description"
                title="bar intent description"
              >
                bar intent description
              </div>
            </div>
            <div
              class="dropdownItemWrapper hoverable"
            >
              <div
                class="dropdownItemLabel"
              >
                <span
                  class="action"
                >
                  <span
                    class="dropdownButton"
                    id="add-baz-intent-1"
                  >
                    <i
                      class="icon material-icons"
                    >
                      add
                    </i>
                  </span>
                </span>
                <span
                  class="label"
                >
                  Baz/intent
                </span>
              </div>
              <div
                class="description"
                title="baz intent description"
              >
                baz intent description
              </div>
            </div>
            <div
              class="dropdownItemWrapper hoverable"
            >
              <div
                class="dropdownItemLabel"
              >
                <span
                  class="action"
                >
                  <span
                    class="dropdownButton"
                    id="add-other-intent-1"
                  >
                    <i
                      class="icon material-icons"
                    >
                      add
                    </i>
                  </span>
                </span>
                <span
                  class="label"
                >
                  Other/intent
                </span>
              </div>
              <div
                class="description"
                title="other intent description"
              >
                other intent description
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<IntentsFeedback /> Single initial intent should render active and available intents 1`] = `
<div
  class="wrapper"
>
  <div
    class="dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="toggleMenu btn btn-secondary"
      type="button"
    >
      <span
        class="mr-1 menuLabel"
      >
        foo/intent
      </span>
      <span
        class="caret material-icons"
      >
        arrow_drop_down
      </span>
    </button>
    <div
      aria-hidden="true"
      class="menuWrapper dropdown-menu dropdown-menu-right"
      role="menu"
      tabindex="-1"
    >
      <div
        class="menu"
      >
        <div
          id="intent-tooltip-1"
        />
        <div
          class="header"
        >
          Message intents
          <i
            class="material-icons ml-2 info"
            id="intent-info-1"
          >
            info_outline
          </i>
        </div>
        <div
          class="options"
        >
          <h6
            class="subheader dropdown-header"
            tabindex="-1"
          >
            foo/intent
          </h6>
          <div
            class="dropdownItemWrapper"
          >
            <div
              class="dropdownItemLabel"
            >
              <span
                class="action"
              >
                <span
                  class="dropdownButton"
                >
                  <i
                    class="reject icon material-icons"
                  >
                    close
                  </i>
                </span>
              </span>
              <span
                class="label"
              >
                Foo/intent
              </span>
            </div>
            <div
              class="description"
              title="foo intent description"
            >
              foo intent description
            </div>
          </div>
          <div
            class="dropdown-divider"
            tabindex="-1"
          />
          <h6
            class="subheader dropdown-header"
            tabindex="-1"
          >
            Other intents
          </h6>
          <div
            class="dropdownItemWrapper hoverable"
          >
            <div
              class="dropdownItemLabel"
            >
              <span
                class="action"
              >
                <span
                  class="dropdownButton"
                  id="add-bar-intent-1"
                >
                  <i
                    class="icon material-icons"
                  >
                    add
                  </i>
                </span>
              </span>
              <span
                class="label"
              >
                Bar/intent
              </span>
            </div>
            <div
              class="description"
              title="bar intent description"
            >
              bar intent description
            </div>
          </div>
          <div
            class="dropdownItemWrapper hoverable"
          >
            <div
              class="dropdownItemLabel"
            >
              <span
                class="action"
              >
                <span
                  class="dropdownButton"
                  id="add-baz-intent-1"
                >
                  <i
                    class="icon material-icons"
                  >
                    add
                  </i>
                </span>
              </span>
              <span
                class="label"
              >
                Baz/intent
              </span>
            </div>
            <div
              class="description"
              title="baz intent description"
            >
              baz intent description
            </div>
          </div>
          <div
            class="dropdownItemWrapper hoverable"
          >
            <div
              class="dropdownItemLabel"
            >
              <span
                class="action"
              >
                <span
                  class="dropdownButton"
                  id="add-other-intent-1"
                >
                  <i
                    class="icon material-icons"
                  >
                    add
                  </i>
                </span>
              </span>
              <span
                class="label"
              >
                Other/intent
              </span>
            </div>
            <div
              class="description"
              title="other intent description"
            >
              other intent description
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<IntentsFeedback /> Single initial intent should send the unsaved intents to the backend on dropdown toggle 1`] = `
Array [
  Array [
    "/api/tickets/0/messages/1/intents/",
    Object {
      "active_intents": Array [
        "bar/intent",
        "foo/intent",
      ],
    },
  ],
]
`;
